# VeganwarsDeluxe

./: .gitignore  .onedev-buildspec.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  WeaponsLegacy.py  cliff.toml  config.py  crowdin.yml  main.py  pyproject.toml  requirements.txt  setup.py  test.py
VegansDeluxe/: __init__.py
VegansDeluxe/core/: ContentManager.py  SessionManager.py  __init__.py
VegansDeluxe/rebuild/: __init__.py
core/: Action.py  ActionManager.py  ContentManager.py  Context.py  DamageHolder.py  Decorators.py  Event.py  EventManager.py  Events.py  Handler.py  Message.py  SessionManager.py  State.py  TargetType.py  TimeMomentStack.py  __init__.py  utils.py
core/Actions/: Action.py  ActionManager.py  Actions.py  AttackAction.py  EntityActions.py  ItemAction.py  StateAction.py  WeaponAction.py
core/Engine/: Engine.py
core/Entities/: Dummy.py  Entity.py  Player.py  StupidRat.py  __init__.py
core/Events/: EventHandlers.py  EventManager.py  Events.py  Handlers.py  __init__.py
core/Items/: Item.py  ItemAction.py  __init__.py
core/Sessions/: Session.py
core/Skills/: Armor.py  Biceps.py  Cherep.py  Dvuzhil.py  Skill.py  Thief.py  __init__.py
core/States/: Aflame.py  Bleeding.py  DamageThreshold.py  Injury.py  KnockDown.py  KnockedWeapon.py  State.py  Stun.py
core/Weapons/: Axe.py  BaseballBat.py  (+17 more)
deluxe/: __init__.py  main.py  startup.py
examples/: basic_turn.py  event_handling.py
modern/: __init__.py
rebuild/: README.md  __init__.py
rpg/: main.py  texts.py
tests/: test_basic_turn.py  test_skills.py
(+437 files in other folders)
